@@ -1,3 +1,9 @@
+2005-11-16  Julien MOUTTE  <julien@moutte.net>
+
+	* gst-libs/gst/video/gstvideosink.c: (gst_video_sink_center_rect):
+	* gst-libs/gst/video/videosink.h: Add helper function needed
+	for video sinks.
+
 2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/videoscale/gstvideoscale.c:
